IGNITE-843 Groups minor.

--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -740,7 +740,8 @@ button .caret, .btn .caret {
 }
 
 .theme-line table.links-edit:extend(.theme-line .links table all) {
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
   label {
     line-height: @input-height;
