--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -243,7 +243,7 @@
 
   li a:hover {
     color: @ignite-red;
-    background-color: transparent;
+    //background-color: transparent;
   }
 
   .active {
@@ -1063,10 +1063,8 @@ a {
 
 .block-callout {
   background-color: @ignite-block-callout-background;
-  border-left-width: 5px;
-  border-left-style: solid;
+  border-left: 5px solid;
   border-color: @ignite-block-callout-border;
-
   margin-bottom: 20px;
 
   p {
