--- a/modules/web-control-center/nodejs/views/configuration/clusters.jade
+++ b/modules/web-control-center/nodejs/views/configuration/clusters.jade
@@ -23,19 +23,19 @@ include ../includes/controls
 
 block content
     .docs-header
-        h1 Create and configure Ignite clusters
+        h1 Create and Configure Ignite Clusters
         hr
     .docs-body(ng-controller='clustersController')
-        .block-callout
-            p(ng-bind-html='joinTip(screenTip)')
+        +block-callout('joinTip(screenTip)')
         .links(ng-hide='clusters.length == 0')
+            lable.labelHeader Clusters:
             table(st-table='clusters')
                 tbody
                     tr(ng-repeat='row in clusters track by row._id')
                         td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
                             a(ng-click='selectItem(row)') {{$index + 1}}) {{row.name}}, {{row.discovery.kind | displayValue:discoveries:'Discovery not set'}}
         button.btn.btn-primary(ng-click='createItem()') &nbspAdd cluster
-        label(style='margin-left: 15px; margin-right: 10px') Use template:
+        label(style='margin-left: 10px; margin-right: 10px') Use template:
         button.btn.btn-default.base-control(ng-init='create.template = templates[0].value' ng-model='create.template' data-template='/select' data-placeholder='Choose cluster template' bs-options='item.value as item.label for item in templates' bs-select)
         i.tiplabel.fa.fa-question-circle(bs-tooltip data-title='{{joinTip(templateTip)}}' type='button')
         hr
