--- a/modules/web-control-center/nodejs/views/configuration/summary.jade
+++ b/modules/web-control-center/nodejs/views/configuration/summary.jade
@@ -36,18 +36,16 @@ mixin hard-link(ref, txt)
 
 block content
     .docs-header
-        h1 Configurations summary
+        h1 Configurations Summary
         hr
     .docs-body(ng-controller='summaryController')
-        div
-            .block-callout
-                p(ng-bind-html='joinTip(screenTip)')
+        +block-callout('joinTip(screenTip)')
         div(ng-if='clusters.length == 0')
             | No cluster configured. You can&nbsp;
             a(href='clusters') configure
             | &nbsp;it.
         div(ng-if='clusters.length > 0')
-            p Following cluster configurations were created, you can download them as XML, java code or as docker file.
+            lable.labelHeader Clusters:
             .links
                 table(st-table='clusters')
                     tbody
