--- a/modules/web-control-center/nodejs/views/settings/admin.jade
+++ b/modules/web-control-center/nodejs/views/settings/admin.jade
@@ -47,7 +47,12 @@ block container
                                 input(type='checkbox' ng-disabled='row.adminChanging || row._id == user._id'
                                     ng-model='row.admin' ng-change='toggleAdmin(row)')
                             td(style='text-align: center;')
-                                a(ng-click='removeUser(row)' ng-show='row._id != user._id' title='Remove user')
+                                a(ng-click='removeUser(row)' ng-show='row._id != user._id' bs-tooltip data-title='Remove user')
                                     i.fa.fa-remove
-                                a(style='margin-left: 5px' ng-href='admin/become?viewedUserId={{row._id}}' ng-show='row._id != user._id' title='Become this user')
+                                a(style='margin-left: 5px' ng-href='admin/become?viewedUserId={{row._id}}' ng-show='row._id != user._id' bs-tooltip data-title='Become this user')
                                     i.fa.fa-eye
+                    tfoot
+                        tr
+                            td(colspan='5' class="text-right")
+                                div(st-pagination st-items-by-page='15' st-displayed-pages='5')
+
