# ignite-843 Fixed admin page

--- a/modules/web-control-center/nodejs/views/settings/admin.jade
+++ b/modules/web-control-center/nodejs/views/settings/admin.jade
@@ -18,7 +18,7 @@ append scripts
     script(src='/admin-controller.js')
 
 block container
-    .greedy.row(ng-controller='adminController')
+    .row(ng-controller='adminController')
         .docs-content
             .docs-header
                 h1 List of registered users
