--- a/modules/web-control-center/nodejs/views/settings/profile.jade
+++ b/modules/web-control-center/nodejs/views/settings/profile.jade
@@ -23,7 +23,7 @@ append scripts
     script(src='/profile-controller.js')
 
 block container
-    .row.greedy(ng-controller='profileController')
+    .row(ng-controller='profileController')
         .docs-content
             .docs-header
                 h1 User profile
