--- a/modules/web-control-center/nodejs/views/sql/sql.jade
+++ b/modules/web-control-center/nodejs/views/sql/sql.jade
@@ -25,7 +25,7 @@ block container
     .docs-header
         h1 Connect to Ignite and execute SQL queries
         hr
-    div.greedy(ng-controller='cacheViewerController')
+    div(ng-controller='cacheViewerController')
         h4 Sql console
 
         table#queryTable(cellpadding=0, cellspacing=0, ng-init='queryType = "sql"')
