--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -21,6 +21,11 @@
 @ignite-block-callout-background: #f3f8f3;
 @ignite-block-callout: #50af51;
 
+hr {
+  margin-top: 1.3em;
+  margin-bottom: 1.3em;
+}
+
 .main-header .logo {
   height: auto;
 }
@@ -1080,7 +1085,7 @@ a {
   border-left: 5px solid;
   border-color: @ignite-block-callout;
 
-  margin-bottom: 10px;
+  margin-bottom: 1.3em;
 
   p {
     padding: 5px 0 10px 15px;
