--- a/modules/web-control-center/nodejs/views/templates/copy.jade
+++ b/modules/web-control-center/nodejs/views/templates/copy.jade
@@ -19,7 +19,7 @@
         .modal-content
             .modal-header
                 button.close(type="button" ng-click="$hide()") &times;
-                h4.modal-title Save as
+                h4.modal-title Copy
             form.form-horizontal(name='inputForm' novalidate)
                 .modal-body.row
                     .col-sm-9.login.col-sm-offset-1
