--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -22,8 +22,8 @@
 @ignite-block-callout: #50af51;
 
 hr {
-  margin-top: 1.3em;
-  margin-bottom: 1.3em;
+  margin-top: 0.65em;
+  margin-bottom: 0.65em;
 }
 
 .main-header .logo {
@@ -481,6 +481,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   font-family: Roboto Slab, serif;
+  margin-bottom: 0.65em;
 }
 
 .submit-vote.submit-vote-parent.voted a.submit-vote-button, .submit-vote.submit-vote-parent a.submit-vote-button:hover {
@@ -723,7 +724,6 @@ button .caret, .btn .caret {
 .theme-line .links table {
   display: table;
   table-layout: fixed;
-  margin-bottom: 10px;
 
   td {
     padding-left: 18px;
@@ -1080,15 +1080,27 @@ a {
   content: '\25BC';
 }
 
+.panel {
+  margin-bottom: 0.65em;
+}
+
+.panel-group .panel + .panel {
+  margin-top: 1.3em;
+}
+
+.padding-dflt {
+  padding-top: 0.65em;
+  padding-bottom: 0.65em;
+}
+
 .block-callout {
   background-color: @ignite-block-callout-background;
   border-left: 5px solid;
   border-color: @ignite-block-callout;
 
-  margin-bottom: 1.3em;
-
   p {
     padding: 5px 0 10px 15px;
+    margin: 0;
   }
 
   i {
