--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -593,7 +593,7 @@ h1.ignite-logo {
 }
 
 .greedy {
-  min-height: 200px;
+  min-height: 100%;
   height: ~"calc(100vh - 290px)";
 }
 
@@ -1052,7 +1052,7 @@ input.ng-dirty.ng-invalid, button.ng-dirty.ng-invalid {
   margin-top: 10px;
 }
 
-.configBox .nav > li > a {
+.nav-tabs > li > a {
   padding: 5px 5px;
 }
 
@@ -1107,8 +1107,19 @@ a {
 }
 
 .ace_editor, #ace_document {
+  margin:  0.65em 0 0 0;
+
   width: 100%;
   height: 400px;
+
+  .ace_gutter {
+    background: transparent !important;
+    border: 1px #ddd;
+    border-right-style: solid;
+  }
+
+  .ace_gutter-cell, .ace_folding-enabled > .ace_gutter-cell {
+    padding-left: 0.65em;
+    padding-right: 0.9em;
+  }
 }
-
-
