--- a/modules/web-control-center/nodejs/views/configuration/summary.jade
+++ b/modules/web-control-center/nodejs/views/configuration/summary.jade
@@ -39,12 +39,12 @@ block content
         h1 Configurations Summary
         hr
     .docs-body(ng-controller='summaryController')
-        +block-callout('joinTip(screenTip)')
-        div(ng-if='clusters.length == 0')
+        +block-callout('{{screenTip.workflowTitle}}', 'joinTip(screenTip.workflowContent)', '{{screenTip.whatsNextTitle}}', 'joinTip(screenTip.whatsNextContent)')
+        .padding-dflt(ng-if='clusters.length == 0')
             | No cluster configured. You can&nbsp;
             a(href='clusters') configure
             | &nbsp;it.
-        div(ng-if='clusters.length > 0')
+        .padding-dflt(ng-if='clusters.length > 0')
             lable.labelHeader Clusters:
             .links
                 table(st-table='clusters')
@@ -53,7 +53,7 @@ block content
                             td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
                                 a(ng-click='selectItem(row)') {{$index + 1}}) {{row.name}}
         div(ng-show='selectedItem' role="tab" method='post' action='summary/download')
-            div(bs-collapse data-start-collapsed='false')
+            .padding-dflt(bs-collapse data-start-collapsed='false')
                 .panel.panel-default
                     form.panel-heading(role='tab' method='post' action='summary/download')
                         input(type="hidden" name="_id" value="{{selectedItem._id}}")
@@ -90,7 +90,7 @@ block content
                                         .col-sm-4
                                             input#os.form-control(type='text', ng-model='configServer.os' placeholder='debian:8' data-min-length="0" data-html="1" data-auto-select="true" data-animation="am-flip-x" bs-typeahead bs-options='os for os in oss')
                                     div(ui-ace='{ onLoad: aceInit, mode: "dockerfile" }' ng-model='dockerServer')
-            div(bs-collapse data-start-collapsed='false')
+            .padding-dflt(bs-collapse data-start-collapsed='false')
                 .panel.panel-default
                     form.panel-heading(role='tab' method='post' action='summary/download')
                         input(type="hidden" name="_id" value="{{selectedItem._id}}")
