--- a/modules/web-control-center/nodejs/views/configuration/clusters.jade
+++ b/modules/web-control-center/nodejs/views/configuration/clusters.jade
@@ -26,7 +26,7 @@ block content
         h1 Create and Configure Ignite Clusters
         hr
     .docs-body(ng-controller='clustersController')
-        +block-callout('joinTip(screenTip)')
+        +block-callout('{{screenTip.workflowTitle}}', 'joinTip(screenTip.workflowContent)', '{{screenTip.whatsNextTitle}}', 'joinTip(screenTip.whatsNextContent)')
         .links(ng-hide='clusters.length == 0')
             .padding-dflt
                 lable.labelHeader Clusters:
@@ -35,14 +35,14 @@ block content
                         tr(ng-repeat='row in clusters track by row._id')
                             td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
                                 a(ng-click='selectItem(row)') {{$index + 1}}) {{row.name}}, {{row.discovery.kind | displayValue:discoveries:'Discovery not set'}}
-        .padding-dflt
+        .padding-top-dflt
             button.btn.btn-primary(ng-click='createItem()') &nbspAdd cluster
             label(style='margin-left: 10px; margin-right: 10px') Use template:
             button.btn.btn-default.base-control(ng-init='create.template = templates[0].value' ng-model='create.template' data-template='/select' data-placeholder='Choose cluster template' bs-options='item.value as item.label for item in templates' bs-select)
             i.tiplabel.fa.fa-question-circle(bs-tooltip data-title='{{joinTip(templateTip)}}' type='button')
         hr
         form.form-horizontal(name='inputForm' ng-if='backupItem' novalidate)
-            .padding-dflt(bs-collapse data-start-collapsed='false')
+            div(bs-collapse data-start-collapsed='false')
                 .panel.panel-default
                     .panel-heading
                         h3
@@ -51,25 +51,27 @@ block content
                         .panel-body
                             .settings-row(ng-repeat='field in general')
                                 +form-row
-            div(bs-collapse data-start-collapsed='true')
-                .panel-title(ng-show='expanded')
-                    h3
-                        a(bs-collapse-toggle='0' ng-click='expanded = !expanded;') {{expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
-                .panel-collapse(bs-collapse-target)
-                    .span(bs-collapse data-start-collapsed='true' data-allow-multiple='true')
-                        .panel.panel-default(ng-repeat='group in advanced')
-                            .panel-heading
-                                h3
-                                    a(bs-collapse-toggle) {{group.label}}
-                                    i.tipLabel.fa.fa-question-circle(ng-if='group.tip' bs-tooltip='joinTip(group.tip)' type='button')
-                                    i.tipLabel.fa.fa-question-circle.blank(ng-if='!group.tip')
-                            .panel-collapse(bs-collapse-target)
-                                .panel-body
-                                    .settings-row(ng-repeat='field in group.fields')
-                                        +form-row
-                .panel-title
-                    h3
-                        a(bs-collapse-toggle='0' ng-click='expanded = !expanded;') {{expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
-            button.btn.btn-primary(ng-disabled='inputForm.$invalid' ng-click='saveItem()') Save
-            button.btn.btn-primary(ng-show='backupItem._id' ng-disabled='inputForm.$invalid' ng-click='saveItemAs()') Copy
-            button.btn.btn-primary(ng-show='backupItem._id' ng-click='removeItem()') Remove
+            .panel-group(bs-collapse data-allow-multiple="true")
+                div(bs-collapse data-start-collapsed='true')
+                    .panel-title(ng-show='expanded')
+                        h3
+                            a(bs-collapse-toggle='0' ng-click='expanded = !expanded;') {{expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
+                    .panel-collapse(bs-collapse-target)
+                        .span(bs-collapse data-start-collapsed='true' data-allow-multiple='true')
+                            .panel.panel-default(ng-repeat='group in advanced')
+                                .panel-heading
+                                    h3
+                                        a(bs-collapse-toggle) {{group.label}}
+                                        i.tipLabel.fa.fa-question-circle(ng-if='group.tip' bs-tooltip='joinTip(group.tip)' type='button')
+                                        i.tipLabel.fa.fa-question-circle.blank(ng-if='!group.tip')
+                                .panel-collapse(bs-collapse-target)
+                                    .panel-body
+                                        .settings-row(ng-repeat='field in group.fields')
+                                            +form-row
+                    .panel-title
+                        h3
+                            a(bs-collapse-toggle='0' ng-click='expanded = !expanded;') {{expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
+            div
+                button.btn.btn-primary(ng-disabled='inputForm.$invalid' ng-click='saveItem()') Save
+                button.btn.btn-primary(ng-show='backupItem._id' ng-disabled='inputForm.$invalid' ng-click='saveItemAs()') Copy
+                button.btn.btn-primary(ng-show='backupItem._id' ng-click='removeItem()') Remove
