IGNITE-843: Reworked tables L&F.

--- a/modules/web-control-center/src/main/js/public/stylesheets/style.less
+++ b/modules/web-control-center/src/main/js/public/stylesheets/style.less
@@ -827,6 +827,16 @@ button .caret, .btn .caret {
   border: thin dotted lightgrey;
 }
 
+.table-details {
+  border-radius: 5px;
+  border: thin dotted lightgrey;
+
+  margin-top: 10px;
+
+  padding-left: 10px;
+  padding-right: 5px;
+}
+
 .tooltip.right .tooltip-arrow {
   border-right-color: @ignite-red;
 }
